@@ -1,3 +1,10 @@
+2006-09-01  Miklos Szeredi <miklos@szeredi.hu>
+
+	* Fix recursive lock bug in interrupt handling
+
+	* Add utimes() method to highlevel interface, which supports
+	setting times with nanosecond resolution
+
 2006-08-18  Miklos Szeredi <miklos@szeredi.hu>
 
 	* kernel: fix page leak if fuse_readpages() failed in it's
